apps/base/prometheus/middleware-external.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: prometheus-push-auth
  namespace: prometheus
spec:
  basicAuth:
    secret: prometheus-push-auth
