apps/base/prometheus/middleware-pushgateway-strip.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: prometheus-pushgateway-strip
  namespace: prometheus
spec:
  stripPrefix:
    prefixes:
      - /push
