apps/base/prometheus/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: prometheus-strip-prefix
  namespace: prometheus
spec:
  stripPrefix:
    prefixes:
      - /prometheus
