apps/base/prometheus/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: windows-exporter
  namespace: prometheus
subsets: []
