apps/base/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: windows-exporter
  namespace: prometheus
spec:
  ports:
    - port: 9182
      targetPort: 9182
      protocol: TCP
