apps/base/prometheus/alertmanager-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: alertmanager-strip-prefix
  namespace: prometheus
spec:
  stripPrefix:
    prefixes:
      - /alertmanager
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: prometheus
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`placeholder.example.com`) && PathPrefix(`/alertmanager`)"
      kind: Rule
      middlewares:
        - name: alertmanager-strip-prefix
          namespace: prometheus
      services:
        - name: prometheus-alertmanager
          port: 9093
  tls:
    secretName: prometheus-tls-secret
