apps/base/prometheus/ingress-pushgateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-pushgateway
  namespace: prometheus
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: prometheus-prometheus-push-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - placeholder.example.com
      secretName: prometheus-tls-secret
  rules:
    - host: placeholder.example.com
      http:
        paths:
          - path: /push
            pathType: Prefix
            backend:
              service:
                name: prometheus-prometheus-pushgateway
                port:
                  number: 9091
