apps/base/prometheus/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: windows-exporter
  namespace: prometheus
spec:
  entryPoints:
    - win-exporter
  routes:
    - match: "HostRegexp(`.+`)"
      kind: Rule
      services:
        - name: windows-exporter
          port: 9182
